# people-scout

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
src/people_scout/: __init__.py  __main__.py  cli.py  config.py  errors.py  scout.py
src/people_scout/analysis/: __init__.py  analyzer.py  models.py  prompt.py
src/people_scout/output/: __init__.py  console.py  json_writer.py  markdown.py
src/people_scout/selanet/: __init__.py  client.py  errors.py  models.py  rate_limiter.py
tests/: conftest.py  test_models.py  test_output.py  test_prompt.py  test_rate_limiter.py  test_selanet_client.py
tests/fixtures/: twitter_posts.json  twitter_profile.json
